Overlapping Issue Fixe and Change About Us text on Edit Mode

--- a/src/App.css
+++ b/src/App.css
@@ -2448,6 +2448,12 @@ input.ant-input:focus {
   position: relative !important;
 }
 
+
+[id^="react-select-"][id$="-listbox"] {
+  position: relative !important;
+}
+
+
 .select-box-edit .ant-select-selector{
   border: none !important;
   border-radius: 0px !important;
